2014-12-15  Vladimir Makarov  <vmakarov@redhat.com>

PR rtl-optimization/63397
	* ira-int.h (ira_overall_cost, ira_reg_cost, ira_mem_cost): Use
	int64_t.
	(ira_load_cost, ira_store_cost, ira_shuffle_cost): Ditto.
	* ira.c (ira_overall_cost, ira_overall_cost_before): Ditto.
	(ira_reg_cost, ira_mem_cost): Ditto.
	(ira_load_cost, ira_store_cost, ira_shuffle_cost): Ditto.
	(calculate_allocation_cost, do_reload): Use the right
	format for int64_t values.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@218766 138bc75d-0d04-0410-961f-82ee72b054a4